# doviz

./: .gitignore  DEPLOY_RENDER_CUSTOM_DOMAIN.md  coolify.md  render.yaml
finance-api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
finance-api/app/: config.py  dependencies.py  main.py
finance-api/app/api/v1/: health.py  market.py  news.py  (+3 more)
finance-api/app/cache/: memory.py  session_store.py
finance-api/app/providers/: altinkaynak_gold.py  base.py  coingecko.py  finnhub.py  finnhub_ws.py  fmp.py  harem_altin.py  registry.py  yahoo_finance.py
finance-api/app/schemas/: errors.py  history.py  market.py  news.py  quote.py
finance-api/app/services/: eod_fetcher.py  event_bus.py  fallback_resolver.py  market_calendar.py  market_service.py  quote_service.py  refresh_service.py  startup_probe.py  tracker_service.py
finance-api/app/symbols/: registry.py
finance-api/scripts/: _check_deps.py  _check_deps2.py  _check_deps3.py  check_api.py  check_live_data.py  compare_indexes.py  parse_bundle.py  probe_altinkaynak.py  probe_api_altinkaynak.py  probe_gold2.py  probe_gold_sources.py  probe_raw.py  probe_yahoo_fields.py  review_gold.py  test_fmp.py  test_fmp_plan.py  test_fmp_stable.py  test_live_prices.py  test_providers.py  verify_gold.py  verify_istanbul.py
finance-api/tests/: conftest.py
finance-api/tests/test_api/: test_quotes.py
finance-api/tests/test_live_data/: test_api_freshness.py  test_provider_liveness.py  test_turkey_timezone.py
finance-api/tests/test_providers/: test_finnhub.py
finance-api/tests/test_services/: test_quote_service.py
(+80 files in other folders)
